css/style.css
body {
    font-family: 'Lato', sans-serif;
    color: white;
    overflow: hidden;
}

#nav {
    font-family: 'Open Sans', sans-serif;
    font-size: 25px;
}

.fade_in_logo {animation:fading 2s}@keyframes fading{0%{opacity:0}100%{opacity:1}}
.fade_in_motto_main {animation:fading 6s}@keyframes fading{0%{opacity:0}100%{opacity:1}}
.fade_in_motto, .fade_in_button {animation:fading 7s}@keyframes fading{0%{opacity:0}100%{opacity:1}}

#logo_small {
    font-size: 200px;
    height: 250px;
}

#logo {
    font-size: 110px;
    padding-top: 150px;
    height: 350px;
}

#logo, #logo_small {
    width: auto;
}

#motto_main_mobile, #motto_mobile {
    font-size: 20px;
}

#motto_main, #motto, #motto_main_mobile, #motto_mobile, #profile_header, #experience_header,
#abilities_header, #projects_header, #contact_header,.profile_header, .abilities_header,
span.caption_header, #social_header, #video_header, #table_header {
    font-family: 'Sriracha', cursive;
}

#motto {
    padding-bottom: 200px;
}

#motto_mobile {
    padding-bottom: 25px;
}

#home_button_text {
    font-size: 30px;
}

#home, #profile, #experience, #abilities, #projects, #contact, #video, #table {
    height: 5120px;
}

#profile, #experience, #abilities, #projects, #contact, #video, #table {
     padding-top: 55px;
}

#abilities {
    height: 2500px
}

#profile_header, #abilities_header, #contact_header, #contact_content {
    padding-bottom: 25px;
}

.profile_header, .abilities_header{
    font-size: 20px !important;
}

#profile_content {
    font-size: 25px;
}

#abilities_content_row_one, #abilities_content_row_two {
    font-size: 15px;
    padding-bottom: 50px;
}

#contact_content {
    font-size: 25px;
}

#image:hover {
    color: white;
}

.image, .you_are_the_only_exception {
    background-color: white;
}

.image {
    border-width: 8px !important;
}

.you_are_the_only_exception {
    border-width: 2px !important;
}

.form_button {
    color: white;
}

.form_header, .form_content {
    color: black;
}

.carousel-caption {
    top: 50px;
    bottom: auto;
}

a:link {
    color: white;
    text-decoration: none;
}

a:visited {
    color: white;
}

.link {
    text-decoration: underline !important;
}

::selection{
    background: white;
    color: black;
}
::-moz-selection {
    background: white;
    color: black;
}

/* ----------------------------------------------- */
/* Following code provided by thetypebeast */
/* https://codepen.io/thetypebeast/pen/KWNGGd */
* {
    margin:0;
    padding:0;
}

body::before {
    content:"";
    position:fixed;
    z-index:-100;
    width:100%;
    height:100%;
    background-color:#FF1900;
    background-image:
            radial-gradient(circle farthest-side at top right, transparent, #FF9101),
            radial-gradient(circle farthest-side at top left, transparent, #00fe24),
            radial-gradient(circle farthest-corner at 0% 100%, transparent, #fee600);
    animation:bg-change 60s infinite;
}

@keyframes bg-change {
    0%, 100% {
        filter:hue-rotate(0deg);
    }
    50% {
        filter:hue-rotate(-45deg);
    }
}
/* -----------------------------------------------*/

